# libpthread

./: CMakeLists.txt  LICENSE  README.md  build.bat  libpthread.sln  libpthread.vcxproj  libpthread.vcxproj.filters
include/: pthread.h  semaphore.h
include/sys/: cdefs.h  queue.h
src/: main.cpp  private.h  pthread.c
src/tests/: main.cpp
